--- a/CP2-FRONT-REACT/package.json
+++ b/CP2-FRONT-REACT/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "next": "14.2.14",
+    "nome-do-projeto": "file:",
     "react": "^18",
     "react-dom": "^18"
   },
